# open-silver

./: .agent-silver-test  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  evalite.config.ts  example.env  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
cli/: README.md  package.json
cli/src/: collector.ts  config.ts  index.ts  pricing.ts  reporter.ts  types.ts
mcp/: package.json  tsconfig.json
mcp/src/: index.ts
podcast/: .gitignore  README.md  main.py  pyproject.toml
public/podcast/: 1.md  10.md  100.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  33.md  34.md  35.md  36.md  37.md  38.md  39.md  4.md  40.md  41.md  42.md  43.md  44.md  (+60 more)
src/app/: globals.css  layout.tsx  page.tsx
src/behavioral-checker/: constants.ts
src/components/: animated-dialog.tsx  container.tsx  description.tsx  divider.tsx  footer.tsx  grid.tsx  header.tsx  heading.tsx  logos.tsx  query-client-wrapper.tsx  section.tsx  skeleton.tsx  space.tsx  spacer.tsx  spinner.tsx  tool-card.tsx
src/evals/: test.eval.ts
src/lib/: constants.ts  github.ts  openai.ts  utils.ts
src/resume-checker/: utils.test.ts  utils.ts
src/roast-me/: constants.ts  index.ts  types.ts  utils.ts
src/roast-my-setup/: constants.ts  index.ts  schemas.ts  types.ts
src/salary-calculator/: constants.ts  index.ts  types.ts  utils.ts
src/takehome-checker/: constants.ts  index.ts
(+216 files in other folders)
